--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /* body */
 
 body{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;
 }
 
 /* header */
@@ -29,7 +29,7 @@ header{
 header h3{
     color: white;
     font-size: 25px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;
 }
 /* targeting links */
 
@@ -37,7 +37,7 @@ header h3{
     color: white;
     margin-left: 20px;
     text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;
 }
 
 /* hero section */
@@ -60,7 +60,7 @@ header h3{
 .hero h1{
     color: white;
     font-size: 50px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-bottom: 30px;
 }
 
@@ -73,7 +73,7 @@ header h3{
 
 .hero p{
     color: white;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: lighter; opacity: 70%;
     font-size: 25px;
 }
 
@@ -86,7 +86,6 @@ header h3{
 
 .portfolio h2{
     font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
     margin-bottom: 30px;
     color: #2c3e50;
 }
@@ -118,8 +117,8 @@ header h3{
 
 .about h2{
     font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
-    margin-bottom: 30px;   
+    margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;   
 }
 
 .about img{
@@ -131,6 +130,7 @@ header h3{
     column-count: 2;
     text-align: left;
     margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold; opacity: 80%;
 }
 
 /* button */
@@ -154,7 +154,6 @@ header h3{
 
 .contact h2{
     font-size: 40px;
-    font-family: 'Times New Roman', Times, serif;
     margin-bottom: 30px; 
     color: #2c3e50;
 }
@@ -202,16 +201,22 @@ footer{
    
 }
 
+
 .icons img{
-    width: 10%;
-    border: 1px solid white;
-    border-radius: 80px;
-
-}
-
-.items h3{
+    height: 20px;
     margin-bottom: 30px;
 }
+
+.icons h3{
+    margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;
+}
+.items h3{
+    margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-weight: bold;
+}
+
+
 
 .copy{
     background-color: #1a252f;
@@ -223,7 +228,23 @@ footer{
 .copy p{
     bottom: 10px;
     font-size: 10px;
+    opacity: 60%;
 }
-
+.pic{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    justify-content: space-evenly;
+}
+.icon{
+    border: 1px solid white;
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    align-items: center;
+    padding-top: 10px;
+}   
+   
 
 
